<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/login_screen_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="4dp"
        android:src="@drawable/welcome_screen_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.35"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_text_title"
        app:layout_constraintWidth_percent="0.7"
        tools:ignore="MissingConstraints"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_text_input"
        app:layout_constraintTop_toBottomOf="@id/login_screen_image"
        app:layout_constraintWidth_percent="0.9"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="60dp"
        tools:ignore="MissingConstraints"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:textSize="18sp"
            android:hint="@string/login_input"
            android:paddingEnd="0dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_text_input"
        app:layout_constraintWidth_percent="0.9"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginTop="10dp"
        android:layout_width="0dp"
        android:layout_height="60dp"
        tools:ignore="MissingConstraints"
        app:layout_constraintTop_toBottomOf="@id/login_text_input"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/black"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:textSize="18sp"
            android:inputType="textPassword"
            android:hint="@string/password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.button.MaterialButton
        style="@style/ButtonTheme"
        android:id="@+id/login_button_login"
        android:layout_width="0dp"
        android:layout_height="60sp"
        tools:ignore="MissingConstraints"
        app:layout_constraintWidth_percent="0.8"
        app:layout_constraintTop_toBottomOf="@id/password_text_input"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/login_button_text"
        android:layout_marginTop="20sp"
        />

    <com.google.android.material.button.MaterialButton
        style="@style/ButtonTheme"
        android:id="@+id/login_button_back"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="?android:attr/selectableItemBackground"
        android:drawableLeft="@drawable/ic_vector_back"
        android:paddingStart="13dp"
        android:paddingEnd="13dp"
        android:scaleX="1.4"
        android:scaleY="1.4"
        app:iconSize="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/login_text_title"
        />

    <TextView
        android:id="@+id/login_text_title"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginTop="16dp"
        android:gravity="center_vertical"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/login_title"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/login_button_back"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>